# helloworld

./: .cproject  .gitignore  .project  .sonar-project  Jenkinsfile  Makefile.am  Makefile.am.am2gtest  Makefile.am.cppcheck  Makefile.am.cpplint  Makefile.am.doxygen  Makefile.am.flint  Makefile.am.gcovr  Makefile.am.sonarqube  README-autotools.md  README-metrics.md  README.md  autogen.sh  configure.ac  doxygen.cfg
include/: world.h
m4/: ax_gcovr.m4
src/: .gitignore  Makefile.am  hello.cc  hello.h  main.cc  world.cc
src/helloworld/: hello.cc  hello.h
src/helloworld/world/: world.cc  world.h
src/world/: world.cc  world.h
test/: .gitignore  Makefile.am  README-valgrind.md  gtest-driver  hello_test.cc  world_test.cc
